src/ion/test/fail/redeclaration.ion
x = 1
//  cannot redeclare variable
x = 2
